--- a/01/views/home.erb
+++ b/01/views/home.erb
@@ -1,3 +1,14 @@
 <h1>AJAX Atomics - 01</h1>
 
 <script type="text/javascript" src="/global.js"></script>
+
+<ol>
+  <li>Why are you able to make requests to **/info1** and **/info2** even though there are no route handlers for those paths defined in **app.rb**?</li>
+  <p>The files /info1 and /info2 are in the public file.</p>
+  
+  <li>Why is the XHR object's request path **/info1** instead of **/public/info1**?</li>
+  <p>The public folder is the default path for Sinatra.</p>
+  
+  <li>Within the `addEventListener` function, what does `this` represent?</li>
+  <p>'This' refers to the variable req, which is what the event listener is listening for (the response of 'this' being loaded.)</p>
+</ul>
