--- a/02/views/home.erb
+++ b/02/views/home.erb
@@ -1,3 +1,8 @@
 <h1>AJAX Atomics - 02</h1>
 
 <script type="text/javascript" src="/global.js"></script>
+
+<ol>
+  <li>What is the difference between this atomic and the first atomic?</li>
+  <p>In this atomic, the request is sent through the app.rb controller rather than to the public folder.</p>
+</ol>
